src/test/ui/issues/issue-38091.stderr
error[E0277]: the trait bound `(): Valid` is not satisfied
  --> $DIR/issue-38091.rs:8:5
   |
LL |     type Ty: Valid;
   |     --------------- required by `Iterate::Ty`
...
LL |     default type Ty = ();
   |     ^^^^^^^^^^^^^^^^^^^^^ the trait `Valid` is not implemented for `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
